@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -19,7 +19,6 @@ import static org.openhab.binding.airgradient.internal.AirGradientBindingConstan
 
 import java.lang.reflect.Type;
 import java.nio.charset.StandardCharsets;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
@@ -85,9 +84,7 @@ public class RemoteAPIController {
                     switch (contentType) {
                         case CONTENTTYPE_JSON:
                             return JsonParserHelper.parseJson(gson, stringResponse);
-                        case CONTENTTYPE_TEXT:
-                            return PrometheusParserHelper.parsePrometheus(stringResponse);
-                        case CONTENTTYPE_OPENMETRICS:
+                        case CONTENTTYPE_TEXT, CONTENTTYPE_OPENMETRICS:
                             return PrometheusParserHelper.parsePrometheus(stringResponse);
                         default:
                             logger.debug("Unhandled content type returned: {}", contentType);
@@ -96,7 +93,7 @@ public class RemoteAPIController {
             }
         }
 
-        return Collections.emptyList();
+        return List.of();
     }
 
     public @Nullable LocalConfiguration getConfig() throws AirGradientCommunicationException {
