@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,7 +16,6 @@ import static org.openhab.binding.bticinosmarther.internal.SmartherBindingConsta
 
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeParseException;
-import java.util.Collections;
 import java.util.List;
 
 import org.eclipse.jdt.annotation.Nullable;
@@ -87,7 +86,7 @@ public class Chronothermostat {
      * @return the list of registered programs, or an empty list in case of no programs available
      */
     public List<Program> getPrograms() {
-        return (programs != null) ? programs : Collections.emptyList();
+        return (programs != null) ? programs : List.of();
     }
 
     /**
